--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "prettier": "3.4.1"
   }
 }
