--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "fontkit": "^2.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
