--- a/.gitignore
+++ b/.gitignore
@@ -141,4 +141,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+order_bill.pdf
+
+
 # End of https://www.toptal.com/developers/gitignore/api/node
